<?xml version="1.0" encoding="utf-8"?><!--底部标签栏，更布局必须是TabHost，且ID必须为@android：id/tabhost-->
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--内容页面都挂在这个框架布局之下-->
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/tabBar_height" />

        <!--这是例行公事的选项部件，实际已经隐藏-->
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <!--底部标签栏，采用水平线性布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabBar_height"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <!--第一个标签控件-->
            <LinearLayout
                android:id="@+id/ll_first"
                style="@style/llBottom">

                <TextView
                    android:id="@+id/tab_tv_first"
                    style="@style/TabText"
                    android:text="@string/tab_knowledge" />

                <!--设置点击的样式-->
            </LinearLayout>

            <!--第二个标签控件-->
            <LinearLayout
                android:id="@+id/ll_second"
                style="@style/llBottom">

                <TextView
                    android:id="@+id/tab_tv_second"
                    style="@style/TabText"
                    android:text="@string/tab_control" />
            </LinearLayout>

            <!--第三个标签控件-->
            <LinearLayout
                android:id="@+id/ll_third"
                style="@style/llBottom">

                <TextView
                    android:id="@+id/tab_tv_third"
                    style="@style/TabText"
                    android:text="@string/tab_myInf" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</TabHost>