<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CL_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@null"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:transitionName="CL_login">

    <include
        layout="@layout/item_tea_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_login_with_code"
        style="@style/CanClickButton"
        android:layout_marginStart="24dp"
        android:gravity="start|center_vertical"
        android:onClick="changeModeListener"
        android:text="@string/login_ValidateCode"
        app:layout_constraintBottom_toTopOf="@+id/bt_login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <ImageView
        android:id="@+id/login_password_close"
        style="@style/CloseImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="78dp"
        android:text="@string/login_with_password"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_password">

        <EditText
            android:id="@+id/et_phone_num_login_password"
            style="@style/TextViewPhone"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_phone_code_password"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            style="@style/LoginDivider"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et_phone_code_password"
            style="@style/TextViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:ems="2"
            android:enabled="false"
            android:inputType="phone"
            android:text="@string/China_code"
            android:textColor="@color/app_text_color"
            android:textColorHint="@color/app_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <View
            style="@style/LoginDivider"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et_password"
            style="@style/TextViewPassword"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bt_login_password"
        style="@style/CantClickButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@color/gray"
        android:hint="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login_with_code" />

    <Button
        style="@style/CanClickButton"
        android:layout_marginEnd="24dp"
        android:gravity="end|center_vertical"
        android:onClick="startRegisterActivityListener"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/bt_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>